Test_files/invalidTestCases/mod0.avm
push int32(0)
push int16(4000)
mod
exit